--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
 
       - run: make info
 
-      - run: make clean all
+      - run: make clean test
 
       - uses: actions/upload-artifact@v5
         with:
@@ -48,3 +48,4 @@ jobs:
             ./*.dll
             ./*.dylib
           retention-days: 3
+          if-no-files-found: error
